--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: PayButton
+title: PayButton Documentation
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   The easiest way to accept a Bitcoin Cash online.
