--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@paybutton/paybutton",
+  "name": "@paybutton/react",
   "version": "1.0.0",
   "description": "The easiest way to accept Bitcoin Cash online",
   "author": "poldridge",
@@ -20,7 +20,8 @@
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -58,8 +59,6 @@
     "microbundle": "^0.12.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-scripts": "^3.4.3",
     "typescript": "^3.7.5"
