--- a/react/package.json
+++ b/react/package.json
@@ -4,7 +4,10 @@
   "description": "The easiest way to accept Bitcoin Cash online",
   "author": "poldridge",
   "license": "MIT",
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PayButton/paybutton.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
