--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -32,5 +32,8 @@
     "type": "git",
     "url": "https://github.com/PayButton/paybutton.git"
   },
+  "files": [
+    "dist"
+  ],
   "license": "MIT"
 }
