--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@
 title: PayButton Documentation
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  The easiest way to accept a Bitcoin Cash online.
+  The easiest way to accept Bitcoin Cash online.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: thepaybutton
