--- a/new-docs/package.json
+++ b/new-docs/package.json
@@ -12,9 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@mdx-js/mdx": "^1.6.16",
-    "@paybutton/paybutton": "file:../widget/paybutton-paybutton-1.0.0.tgz",
-    "@paybutton/react": "file:../paybutton/paybutton-react-1.0.0.tgz",
+    "@paybutton/paybutton": "^1.0.2",
+    "@paybutton/react": "^1.0.3",
     "docz": "^2.3.1",
+    "gatsby-theme-docz": "^2.3.1",
     "react": "^16.13.1",
     "react-codemirror2": "^7.2.1",
     "react-datepicker": "^3.2.2",
