--- a/new-docs/package.json
+++ b/new-docs/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "The easiest way to accept Bitcoin Cash online.",
   "main": "index.js",
-  "dependencies": {
-    "docsify": "^4.11.6"
+  "devDependencies": {
+    "docsify-cli": "^4.4.2"
   },
-  "devDependencies": {},
   "scripts": {
     "serve": "npx docsify serve"
   },
