--- a/react/package.json
+++ b/react/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@popperjs/core": "^2.7.2",
     "@storybook/addon-a11y": "^6.0.22",
     "@storybook/addon-actions": "^6.0.22",
     "@storybook/addon-essentials": "^6.0.22",
