--- a/react/package.json
+++ b/react/package.json
@@ -71,6 +71,7 @@
     "dist"
   ],
   "dependencies": {
+    "@bitauth/libauth": "^1.18.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
