--- a/react/package.json
+++ b/react/package.json
@@ -75,7 +75,9 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "@types/currency-formatter": "^1.3.0",
     "copy-to-clipboard": "^3.3.1",
+    "currency-formatter": "^1.5.6",
     "lodash": "^4.17.20",
     "notistack": "^1.0.0",
     "qrcode.react": "^1.0.0",
