--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docsify",
-  "version": "1.0.0",
+  "name": "@paybutton/docs",
+  "version": "1.1.0",
   "description": "The easiest way to accept Bitcoin Cash online.",
   "main": "index.js",
   "devDependencies": {
@@ -10,5 +10,5 @@
     "serve": "npx docsify serve"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
