--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -35,5 +35,8 @@
   "files": [
     "dist"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@rollup/plugin-json": "^4.1.0"
+  }
 }
