--- a/react/package.json
+++ b/react/package.json
@@ -77,6 +77,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "bignumber.js": "^9.0.1",
     "copy-to-clipboard": "^3.3.1",
     "lodash": "^4.17.20",
     "notistack": "^1.0.0",
