ignore unused escape

--- a/react/.eslintrc
+++ b/react/.eslintrc
@@ -30,6 +30,7 @@
     }
   },
   "rules": {
+    "no-useless-escape" :0,
     "no-unused-expressions": 0,
     "space-before-function-paren": 0,
     "react/prop-types": 0,
