--- a/react/package.json
+++ b/react/package.json
@@ -23,8 +23,8 @@
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": ">= 16.13.1",
+    "react-dom": ">= 16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
