--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -5,23 +5,23 @@
   "main": "dist/paybutton.js",
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-commonjs": "13.0.2",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-image": "^2.0.5",
-    "@rollup/plugin-node-resolve": "8.4.0",
-    "@rollup/plugin-replace": "2.4.1",
-    "@rollup/plugin-typescript": "5.0.2",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-typescript": "^8.3.3",
     "camelcase": "^6.0.0",
     "paybutton": "file:../react",
-    "preact": "10.5.12",
-    "rollup": "2.40.0",
+    "preact": "^10.4.5",
+    "rollup": "^2.19.0",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svg": "^2.0.0",
-    "rollup-plugin-terser": "6.1.0",
-    "tslib": "2.1.0",
-    "typescript": "3.9.9"
+    "rollup-plugin-terser": "^6.1.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "rollup -c rollup.dev.js -w",
