--- a/react/package.json
+++ b/react/package.json
@@ -23,67 +23,67 @@
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "16.14.0",
+    "react-dom": "16.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@popperjs/core": "^2.7.2",
-    "@storybook/addon-a11y": "^6.1.18",
-    "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.18",
-    "@storybook/addon-links": "^6.1.18",
-    "@storybook/node-logger": "^6.1.18",
-    "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.18",
-    "@types/currency-formatter": "^1.3.0",
-    "@types/lodash": "^4.14.157",
-    "@types/node": "^12.12.38",
-    "@types/qrcode.react": "^1.0.1",
-    "@types/react": "^16.9.27",
-    "@types/react-dom": "^16.9.7",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.1.0",
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.2",
-    "currency-formatter": "^1.5.6",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
-    "microbundle": "^0.12.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "react-is": "^16.13.1",
-    "react-scripts": "^3.4.3",
-    "typescript": "^3.7.5"
+    "@babel/core": "7.18.9",
+    "@popperjs/core": "2.11.5",
+    "@storybook/addon-a11y": "6.5.9",
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
+    "@storybook/node-logger": "6.5.9",
+    "@storybook/preset-create-react-app": "3.2.0",
+    "@storybook/react": "6.5.9",
+    "@types/currency-formatter": "1.5.1",
+    "@types/lodash": "4.14.182",
+    "@types/node": "12.20.55",
+    "@types/qrcode.react": "1.0.2",
+    "@types/react": "16.14.28",
+    "@types/react-dom": "16.9.16",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.5",
+    "concurrently": "5.3.0",
+    "cross-env": "7.0.3",
+    "currency-formatter": "1.5.9",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-config-standard-react": "9.2.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.4.1",
+    "eslint-plugin-promise": "4.3.1",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-standard": "4.1.0",
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
+    "microbundle": "0.12.4",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.7.1",
+    "react-is": "16.13.1",
+    "react-scripts": "3.4.4",
+    "typescript": "3.9.10"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@bitauth/libauth": "^1.18.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/styles": "^4.10.0",
-    "axios": "^0.21.1",
-    "bignumber.js": "^9.0.1",
-    "copy-to-clipboard": "^3.3.1",
-    "lodash": "^4.17.20",
-    "notistack": "^1.0.0",
-    "qrcode.react": "^1.0.0",
-    "react-jss": "^10.3.0"
+    "@bitauth/libauth": "1.19.1",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/lab": "4.0.0-alpha.61",
+    "@material-ui/styles": "4.11.5",
+    "axios": "0.21.4",
+    "bignumber.js": "9.0.2",
+    "copy-to-clipboard": "3.3.1",
+    "lodash": "4.17.21",
+    "notistack": "1.0.10",
+    "qrcode.react": "1.0.1",
+    "react-jss": "10.9.0"
   },
   "husky": {
     "hooks": {
