--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -8,6 +8,7 @@
     "@rollup/plugin-commonjs": "13.0.2",
     "@rollup/plugin-html": "0.2.4",
     "@rollup/plugin-image": "2.1.1",
+    "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "8.4.0",
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-typescript": "5.0.2",
