--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -17,6 +17,7 @@
     "preact": "10.10.0",
     "rollup": "2.40.0",
     "rollup-plugin-cleanup": "3.2.1",
+    "rollup-plugin-dotenv": "0.3.0",
     "rollup-plugin-livereload": "1.3.0",
     "rollup-plugin-serve": "1.1.0",
     "rollup-plugin-svg": "2.0.0",
