--- a/react/package.json
+++ b/react/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-standard": "4.1.0",
+    "html-webpack-plugin": "5.5.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
