--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
     "start": "concurrently npm:watch npm:storybook",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
   },
   "devDependencies": {
@@ -43,7 +43,7 @@
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.5",
     "concurrently": "5.3.0",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "currency-formatter": "1.5.9",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.15.0",
@@ -62,11 +62,11 @@
     "microbundle": "0.12.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-is": "16.13.1",
     "react-scripts": "3.4.4",
-    "typescript": "3.9.10",
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "typescript": "3.9.10"
   },
   "files": [
     "dist"
