--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,8 @@
   "description": "The easiest way to accept Bitcoin Cash online.",
   "main": "index.js",
   "devDependencies": {
-    "docsify-cli": "^4.4.2"
+    "docsify-cli": "^4.4.2",
+    "marked": "^4.1.0"
   },
   "scripts": {
     "serve": "npx docsify serve --port 3001"
