--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -11,7 +11,7 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "8.4.0",
     "@rollup/plugin-replace": "2.4.2",
-    "@rollup/plugin-typescript": "5.0.2",
+    "@rollup/plugin-typescript": "^8.5.0",
     "camelcase": "6.3.0",
     "paybutton": "file:../react",
     "preact": "10.10.0",
