--- a/react/package.json
+++ b/react/package.json
@@ -40,7 +40,7 @@
     "@types/lodash": "4.14.182",
     "@types/node": "12.20.55",
     "@types/qrcode.react": "1.0.2",
-    "@types/react": "16.14.28",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "16.9.16",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
