--- a/react/package.json
+++ b/react/package.json
@@ -31,11 +31,13 @@
     "@popperjs/core": "2.11.5",
     "@storybook/addon-a11y": "6.5.9",
     "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-links": "6.5.9",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
     "@storybook/node-logger": "6.5.9",
-    "@storybook/preset-create-react-app": "3.2.0",
-    "@storybook/react": "6.5.9",
+    "@storybook/preset-create-react-app": "^1.2.0",
+    "@storybook/react": "^6.1.21",
     "@types/currency-formatter": "1.5.1",
     "@types/lodash": "4.14.182",
     "@types/node": "12.20.55",
@@ -62,12 +64,13 @@
     "eslint-plugin-standard": "4.1.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
-    "microbundle": "0.12.4",
+    "microbundle": "^0.15.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "react-is": "16.13.1",
-    "react-scripts": "3.4.4",
-    "typescript": "3.9.10"
+    "react-scripts": "^2.1.3",
+    "typescript": "3.9.10",
+    "webpack": "^5.74.0"
   },
   "files": [
     "dist"
@@ -81,9 +84,11 @@
     "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.1",
     "lodash": "4.17.21",
+    "node": "18.10.0",
     "notistack": "1.0.10",
     "qrcode.react": "1.0.1",
-    "react-jss": "10.9.0"
+    "react-jss": "10.9.0",
+    "storybook": "^6.5.12"
   },
   "husky": {
     "hooks": {
