--- a/react/package.json
+++ b/react/package.json
@@ -74,7 +74,6 @@
     "dist"
   ],
   "dependencies": {
-    "@bitauth/libauth": "1.19.1",
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
@@ -84,7 +83,8 @@
     "lodash": "4.17.21",
     "notistack": "1.0.10",
     "qrcode.react": "1.0.1",
-    "react-jss": "10.9.0"
+    "react-jss": "10.9.0",
+    "xecaddrjs": "^0.0.1"
   },
   "husky": {
     "hooks": {
