--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -19,6 +19,7 @@
     "rollup-plugin-cleanup": "3.2.1",
     "rollup-plugin-dotenv": "0.3.0",
     "rollup-plugin-livereload": "1.3.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-serve": "1.1.0",
     "rollup-plugin-svg": "2.0.0",
     "rollup-plugin-terser": "6.1.0",
