--- a/react/package.json
+++ b/react/package.json
@@ -18,7 +18,7 @@
     "build": "microbundle --jsx React.createElement --format modern,cjs",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
-    "start": "concurrently npm:watch npm:storybook",
+    "dev": "concurrently npm:watch npm:storybook",
     "storybook": "start-storybook -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
   },
