--- a/paybutton-config.json
+++ b/paybutton-config.json
@@ -1,5 +1,4 @@
 {
-  "wsBaseURL": "https://sse.paybutton.org",
-  "apiBaseURL": "https://api.paybutton.org",
-  "apiPriceBaseURL": "https://api.paybutton.org"
+  "wsBaseURL": "https://socket.paybutton.org",
+  "apiBaseURL": "https://api.paybutton.org"
 }
