--- a/paybutton-config.json
+++ b/paybutton-config.json
@@ -1,4 +1,4 @@
 {
-  "wsBaseURL": "https://socket.paybutton.org",
-  "apiBaseURL": "https://api.paybutton.org"
+  "wsBaseUrl": "https://socket.paybutton.org",
+  "apiBaseUrl": "https://api.paybutton.org"
 }
