Updated to use actual prod URL.

--- a/paybutton-config.json
+++ b/paybutton-config.json
@@ -1,5 +1,5 @@
 {
   "wsBaseURL": "https://socket.paybutton.org",
-  "apiBaseURL": "https://api.paybutton.org",
-  "apiPriceBaseURL": "https://api.paybutton.org"
+  "apiBaseURL": "https://paybutton.org",
+  "apiPriceBaseURL": "https://paybutton.org"
 }
