--- a/paybutton-config.json
+++ b/paybutton-config.json
@@ -1,4 +1,4 @@
 {
   "wsBaseUrl": "https://socket.paybutton.org",
-  "apiBaseUrl": "https://api.paybutton.org"
+  "apiBaseUrl": "https://paybutton.org"
 }
