--- a/react/package.json
+++ b/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@paybutton/react",
-  "version": "1.1.0",
-  "description": "The easiest way to accept Bitcoin Cash online",
+  "version": "2.0.1",
+  "description": "The easiest way to accept eCash online",
   "author": "poldridge",
   "license": "MIT",
   "repository": {
