--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-node-resolve": "8.4.0",
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-typescript": "5.0.2",
+    "rollup-plugin-progress": "^1.1.2",
     "camelcase": "6.3.0",
     "paybutton": "file:../react",
     "preact": "10.10.0",
