chore: fix build command

--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "dev": "rollup -c rollup.dev.js -w",
-    "build": "npm ci && rollup -c rollup.prod.js"
+    "build": "rollup -c rollup.prod.js"
   },
   "author": "",
   "repository": {
