--- a/react/package.json
+++ b/react/package.json
@@ -15,7 +15,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle --jsx React.createElement --format modern,cjs && cp -rf dist/react/src/* dist/",
+    "build": "microbundle --jsx React.createElement --format modern,cjs",
+    "postbuild": "cp -rf dist/react/src/* dist/",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
     "dev": "concurrently npm:watch npm:storybook",
