--- a/react/package.json
+++ b/react/package.json
@@ -78,9 +78,11 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
+    "@types/crypto-js": "^4.2.1",
     "axios": "0.21.4",
     "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.1",
+    "crypto-js": "^4.2.0",
     "lodash": "4.17.21",
     "notistack": "1.0.10",
     "qrcode.react": "1.0.1",
