--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,7 @@
     "postbuild": "cp -rf dist/react/src/* dist/ || true",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
-    "dev": "concurrently npm:watch npm:storybook",
+    "dev": "concurrently yarn:watch yarn:storybook",
     "storybook": "start-storybook -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
   },
@@ -65,7 +65,7 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
-    "npm-run-all": "4.1.5",
+    "yarn-run-all": "^3.1.1",
     "prettier": "2.7.1",
     "react-is": "16.13.1",
     "react-scripts": "3.4.4",
