--- a/react/package.json
+++ b/react/package.json
@@ -78,15 +78,15 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
-    "axios": "0.21.4",
-    "bignumber.js": "9.0.2",
-    "copy-to-clipboard": "3.3.1",
+    "axios": "1.6.5",
+    "bignumber.js": "9.1.2",
+    "copy-to-clipboard": "3.3.3",
     "lodash": "4.17.21",
-    "notistack": "1.0.10",
-    "qrcode.react": "1.0.1",
-    "react-jss": "10.9.0",
-    "socket.io-client": "^4.7.1",
-    "xecaddrjs": "^0.0.1"
+    "notistack": "3.0.1",
+    "qrcode.react": "3.1.0",
+    "react-jss": "10.10.0",
+    "socket.io-client": "4.7.4",
+    "xecaddrjs": "0.0.1"
   },
   "husky": {
     "hooks": {
