--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,7 @@
     "postbuild": "cp -rf dist/react/src/* dist/ || true",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
-    "dev": "concurrently npm:watch npm:storybook",
+    "dev": "concurrently yarn:watch yarn:storybook",
     "storybook": "start-storybook -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
     "test": "jest"
@@ -66,7 +66,7 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
-    "npm-run-all": "4.1.5",
+    "yarn-run-all": "^3.1.1",
     "prettier": "2.7.1",
     "react-is": "16.13.1",
     "react-scripts": "3.4.4",
@@ -80,18 +80,18 @@
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
     "@types/jest": "^29.5.11",
-    "axios": "0.21.4",
-    "bignumber.js": "9.0.2",
-    "copy-to-clipboard": "3.3.1",
     "jest": "^29.7.0",
     "crypto-js": "^4.2.0",
     "@types/crypto-js": "^4.2.1",
-    "lodash": "4.17.21",
-    "notistack": "1.0.10",
-    "qrcode.react": "1.0.1",
-    "react-jss": "10.9.0",
-    "socket.io-client": "^4.7.1",
     "ts-jest": "^29.1.1",
+    "axios": "1.6.5",
+    "bignumber.js": "9.1.2",
+    "copy-to-clipboard": "3.3.3",
+    "lodash": "4.17.21",
+    "notistack": "3.0.1",
+    "qrcode.react": "3.1.0",
+    "react-jss": "10.10.0",
+    "socket.io-client": "4.7.4",
     "xecaddrjs": "^0.0.1"
   },
   "husky": {
