--- a/react/package.json
+++ b/react/package.json
@@ -21,7 +21,8 @@
     "prettier": "prettier --write 'src/**/*.ts'",
     "dev": "concurrently npm:watch npm:storybook",
     "storybook": "start-storybook -p 6006",
-    "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs"
+    "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
+    "test": "jest"
   },
   "peerDependencies": {
     "react": "16.14.0",
@@ -81,6 +82,7 @@
     "axios": "0.21.4",
     "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.1",
+    "jest": "^29.7.0",
     "lodash": "4.17.21",
     "notistack": "1.0.10",
     "qrcode.react": "1.0.1",
