--- a/react/package.json
+++ b/react/package.json
@@ -79,6 +79,7 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
+    "@types/jest": "^29.5.11",
     "axios": "0.21.4",
     "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.1",
