--- a/react/package.json
+++ b/react/package.json
@@ -10,13 +10,12 @@
   },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "source": "src/index.tsx",
+  "source": "index.tsx",
   "engines": {
     "node": ">=10"
   },
   "scripts": {
     "build": "microbundle --jsx React.createElement --format modern,cjs",
-    "postbuild": "cp -rf dist/react/src/* dist/ || true",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
     "dev": "concurrently yarn:watch yarn:storybook",
@@ -40,7 +39,7 @@
     "@storybook/react": "6.5.9",
     "@types/currency-formatter": "1.5.1",
     "@types/lodash": "4.14.182",
-    "@types/node": "12.20.55",
+    "@types/node": "17.0.41",
     "@types/qrcode.react": "1.0.2",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
@@ -70,7 +69,7 @@
     "prettier": "2.7.1",
     "react-is": "16.13.1",
     "react-scripts": "3.4.4",
-    "typescript": "^5.3.3"
+    "typescript": "^4.8.2"
   },
   "files": [
     "dist"
@@ -85,7 +84,7 @@
     "@types/crypto-js": "^4.2.1",
     "ts-jest": "^29.1.1",
     "axios": "1.6.5",
-    "bignumber.js": "9.1.2",
+    "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.3",
     "lodash": "4.17.21",
     "notistack": "3.0.1",
