fix: export only default

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "scripts": {
     "build:react":"cd react && yarn && yarn build",
-    "build:paybutton": "cd paybutton && yarn && yarn build",
+    "build:paybutton": "yarn clean:paybutton && cd paybutton && yarn && yarn build",
+    "start:paybutton": "cd paybutton && yarn && yarn start",
     "build":"yarn build:react && yarn build:paybutton",
-    "start:rollup": "cd paybutton && yarn && yarn start",
     "start:docs": "cd docs && yarn && yarn serve",
     "clean:react": "rm -rf react/node_modules react/dist",
     "build:react:clean": "yarn clean:react && yarn build:react",
