--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN yarn install && yarn run build --ignore-scripts
+RUN yarn install && yarn build --ignore-scripts
 COPY . .
 
 CMD chown node: -R node_modules && yarn storybook
