--- a/react/package.json
+++ b/react/package.json
@@ -19,24 +19,24 @@
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.ts'",
     "dev": "concurrently yarn:watch yarn:storybook",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
     "test": "jest"
   },
-  "peerDependencies": {
-    "react": "17.0.0",
-    "react-dom": "17.0.0"
-  },
   "devDependencies": {
     "@babel/core": "7.18.9",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@popperjs/core": "2.11.5",
-    "@storybook/addon-a11y": "6.5.9",
-    "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/addon-links": "6.5.9",
-    "@storybook/node-logger": "6.5.9",
-    "@storybook/preset-create-react-app": "3.2.0",
-    "@storybook/react": "6.5.9",
+    "@storybook/addon-a11y": "7.6.10",
+    "@storybook/addon-actions": "7.6.10",
+    "@storybook/addon-essentials": "7.6.10",
+    "@storybook/addon-links": "7.6.10",
+    "@storybook/node-logger": "7.6.10",
+    "@storybook/preset-create-react-app": "7.6.10",
+    "@storybook/react": "7.6.10",
+    "@storybook/react-webpack5": "^7.6.10",
     "@types/currency-formatter": "1.5.1",
     "@types/lodash": "4.14.182",
     "@types/node": "17.0.41",
@@ -65,11 +65,14 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
-    "yarn-run-all": "^3.1.1",
     "prettier": "2.7.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-is": "16.13.1",
     "react-scripts": "3.4.4",
-    "typescript": "^4.8.2"
+    "storybook": "next",
+    "typescript": "^4.8.2",
+    "yarn-run-all": "^3.1.1"
   },
   "files": [
     "dist"
@@ -78,19 +81,19 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
-    "@types/jest": "^29.5.11",
-    "jest": "^29.7.0",
-    "crypto-js": "^4.2.0",
     "@types/crypto-js": "^4.2.1",
-    "ts-jest": "^29.1.1",
+    "@types/jest": "^29.5.11",
     "axios": "1.6.5",
     "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.3",
+    "crypto-js": "^4.2.0",
+    "jest": "^29.7.0",
     "lodash": "4.17.21",
     "notistack": "1.0.10",
     "qrcode.react": "1.0.1",
     "react-jss": "10.10.0",
     "socket.io-client": "4.7.4",
+    "ts-jest": "^29.1.1",
     "xecaddrjs": "^0.0.1"
   },
   "husky": {
