--- a/react/package.json
+++ b/react/package.json
@@ -14,9 +14,6 @@
   "module": "dist/index.modern.js",
   "main": "dist/index.js",
   "source": "index.tsx",
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
     "build": "tsc --p ./tsconfig-build.json && microbundle --jsx React.createElement --format modern,cjs",
     "lint": "eslint 'lib/**/*.{ts,tsx}' --fix",
@@ -27,61 +24,64 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "react": "17.0.0",
-    "react-dom": "17.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.9",
-    "@popperjs/core": "2.11.5",
-    "@storybook/addon-a11y": "6.5.9",
-    "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/addon-links": "6.5.9",
-    "@storybook/node-logger": "6.5.9",
-    "@storybook/preset-create-react-app": "3.2.0",
-    "@storybook/react": "6.5.9",
-    "@types/currency-formatter": "1.5.1",
-    "@types/lodash": "4.14.182",
-    "@types/node": "17.0.41",
-    "@types/qrcode.react": "1.0.2",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
-    "@typescript-eslint/parser": "2.34.0",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.5",
-    "concurrently": "5.3.0",
+    "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@popperjs/core": "2.11.8",
+    "@storybook/addon-a11y": "8.0.0-alpha.14",
+    "@storybook/addon-actions": "8.0.0-alpha.14",
+    "@storybook/addon-essentials": "^8.0.0-alpha.14",
+    "@storybook/addon-links": "8.0.0-alpha.14",
+    "@storybook/node-logger": "8.0.0-alpha.14",
+    "@storybook/react": "^8.0.0-alpha.14",
+    "@types/currency-formatter": "1.5.4",
+    "@types/lodash": "4.14.202",
+    "@types/node": "20.11.5",
+    "@types/qrcode.react": "1.0.5",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
+    "babel-loader": "^9.1.3",
+    "concurrently": "8.2.2",
     "cross-env": "7.0.3",
     "currency-formatter": "1.5.9",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-config-standard-react": "9.2.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-promise": "4.3.1",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-standard": "4.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.4",
-    "microbundle": "0.12.4",
-    "prettier": "2.7.1",
-    "react-is": "16.13.1",
+    "husky": "8.0.3",
+    "lint-staged": "15.2.0",
+    "prettier": "3.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "18.2.0",
+    "storybook": "8.0.0-alpha.14",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "yarn-run-all": "^3.1.1",
     "react-scripts": "3.4.4",
-    "typescript": "^4.8.2",
-    "yarn-run-all": "^3.1.1"
+
+    "microbundle": "0.12.4"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.4",
-    "@material-ui/lab": "4.0.0-alpha.61",
-    "@material-ui/styles": "4.11.5",
-    "@types/crypto-js": "^4.2.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@types/jest": "^29.5.11",
     "axios": "1.6.5",
-    "bignumber.js": "9.0.2",
+    "bignumber.js": "9.1.2",
     "copy-to-clipboard": "3.3.3",
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
@@ -105,7 +105,7 @@
     ]
   },
   "resolutions": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   }
 }
