--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -13,9 +13,9 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.6",
-    "camelcase": "^6.3.0",
+    "camelcase": "^8.0.0",
     "preact": "^10.10.0",
-    "rollup": "^2.77.4-1",
+    "rollup": "^4.9.6",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-dotenv": "^0.5.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -25,11 +25,11 @@
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "tslib": "^2.6.2",
-    "typescript": "^4.8.2"
+    "typescript": "^5.3.3"
   },
   "scripts": {
-    "dev": "rollup -c rollup.dev.js -w",
-    "build": "rollup -c rollup.prod.js"
+    "dev": "rollup -c rollup.dev.js -w --bundleConfigAsCjs",
+    "build": "rollup -c rollup.prod.js --bundleConfigAsCjs"
   },
   "author": "",
   "repository": {
