--- a/react/package.json
+++ b/react/package.json
@@ -15,11 +15,11 @@
   "main": "dist/index.js",
   "source": "index.tsx",
   "scripts": {
-    "build": "tsc --p ./tsconfig-build.json && microbundle --jsx React.createElement --format modern,cjs",
-    "lint": "eslint 'lib/**/*.{ts,tsx}' --fix",
-    "prettier": "prettier --write 'lib/**/*.ts'",
-    "dev": "concurrently yarn:watch yarn:storybook",
-    "storybook": "start-storybook -p 6006",
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack --mode production",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
+    "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
+    "dev": "concurrently yarn watch yarn storybook",
+    "storybook": "storybook dev -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
     "test": "jest"
   },
@@ -28,11 +28,12 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
+    "@babel/core": "~7.22.20",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-transform-class-properties": "^7.23.3",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-env": "~7.22.20",
+    "@babel/preset-react": "~7.22.15",
+    "@babel/preset-typescript": "~7.22.15",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@popperjs/core": "2.11.8",
     "@storybook/addon-a11y": "8.0.0-alpha.14",
@@ -41,13 +42,16 @@
     "@storybook/addon-links": "8.0.0-alpha.14",
     "@storybook/node-logger": "8.0.0-alpha.14",
     "@storybook/react": "^8.0.0-alpha.14",
-    "@storybook/react-webpack5": "8.0.0-alpha.14",
     "@types/currency-formatter": "1.5.4",
     "@types/lodash": "4.14.202",
+    "@types/mini-css-extract-plugin": "~1.4.3",
     "@types/node": "20.11.5",
     "@types/qrcode.react": "1.0.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/webpack": "^5.28.4",
+    "@types/webpack-bundle-analyzer": "^4.6.2",
+    "@types/webpack-dev-server": "~4.7.2",
     "@typescript-eslint/eslint-plugin": "6.19.1",
     "@typescript-eslint/parser": "6.19.1",
     "babel-loader": "^9.1.3",
@@ -62,7 +66,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.5.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
     "microbundle": "0.12.4",
@@ -72,9 +76,11 @@
     "react-is": "18.2.0",
     "react-scripts": "3.4.4",
     "storybook": "8.0.0-alpha.14",
-    "typescript": "^5.3.3",
+    "typescript": "~5.3.2",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "~4.13.3",
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
@@ -84,6 +90,8 @@
     "@mui/material": "^5.15.6",
     "@mui/styles": "^5.15.6",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@storybook/preset-create-react-app": "^7.6.10",
+    "@storybook/react-webpack5": "^7.6.10",
     "@types/jest": "^29.5.11",
     "axios": "1.6.5",
     "bignumber.js": "9.1.2",
@@ -91,11 +99,15 @@
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
     "lodash": "4.17.21",
-    "notistack": "1.0.10",
+    "mini-css-extract-plugin": "~1.6.2",
+    "notistack": "^3.0.1",
+    "preact": "^10.19.3",
     "qrcode.react": "1.0.1",
-    "react-jss": "10.10.0",
+    "react-refresh": "^0.14.0",
     "socket.io-client": "4.7.4",
+    "stream": "^0.0.2",
     "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
     "xecaddrjs": "^0.0.1"
   },
   "husky": {
