chore: config webpack5

--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -27,9 +27,7 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
     "dist",
