--- a/docs/package.json
+++ b/docs/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@paybutton/docs",
   "version": "1.1.0",
-  "description": "The easiest way to accept Bitcoin Cash online.",
+  "description": "The easiest way to accept eCash online.",
   "main": "index.js",
   "devDependencies": {
-    "docsify-cli": "^4.4.2",
-    "marked": "^4.1.0"
+    "docsify-cli": "^4.4.4",
+    "marked": "^11.1.1"
   },
   "scripts": {
     "serve": "npx docsify serve --port 3001"
