--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:react:clean": "yarn clean:react && yarn build:react",
     "clean:paybutton": "rm -rf paybutton/node_modules paybutton/dist",
     "clean:app": "yarn clean:react && yarn clean:paybutton",
-    "clean:build": "yarn clean:app && yarn build"
+    "clean:build": "yarn clean:app && yarn build",
+    "start:rollup": "cd paybutton && yarn && yarn dev"
   }
 }
