fix: react build

--- a/react/package.json
+++ b/react/package.json
@@ -19,7 +19,7 @@
     "start": "webpack --mode development",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
-    "dev": "concurrently yarn watch yarn storybook",
+    "dev": "webpack serve --config webpack.config.ts --mode production",
     "storybook": "storybook dev -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
     "test": "jest"
@@ -70,14 +70,12 @@
     "html-webpack-plugin": "^5.5.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
-    "microbundle": "0.12.4",
     "prettier": "3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "18.2.0",
-    "react-scripts": "3.4.4",
     "storybook": "8.0.0-alpha.14",
-    "typescript": "~5.3.2",
+    "typescript": "~5.3.3",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
