--- a/react/lib/config.json
+++ b/react/lib/config.json
@@ -1,4 +1,4 @@
 {
-  "wsBaseUrl": "https://socket.paybutton.org",
-  "apiBaseUrl": "https://paybutton.org"
+  "wsBaseUrl": "http://localhost:5000",
+  "apiBaseUrl": "http://localhost:3000"
 }
