--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -27,13 +27,5 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": [
-    "src",
-    "lib",
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "example"
-  ]
+  "include": ["src/**/*", "lib/**/*"],
 }
