--- a/react/package.json
+++ b/react/package.json
@@ -9,11 +9,11 @@
     "url": "https://github.com/PayButton/paybutton.git"
   },
   "type": "module",
+  "types": "dist/main.d.ts",
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
-  "types": "dist/lib/main.d.ts",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc --p ./tsconfig-build.json && vite build",
@@ -24,8 +24,8 @@
     "storybook": "storybook dev"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.3",
@@ -94,6 +94,7 @@
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
+    "@types/react-dom": "^18.2.22",
     "axios": "1.6.5",
     "bignumber.js": "9.1.2",
     "copy-to-clipboard": "3.3.3",
@@ -101,8 +102,6 @@
     "jest": "^29.7.0",
     "lodash": "4.17.21",
     "notistack": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "socket.io-client": "4.7.4",
     "stream": "^0.0.2",
     "xecaddrjs": "^0.0.1"
