--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,29 +1,29 @@
 {
   "compilerOptions": {
     "useDefineForClassFields": true,
-    "target": "ES2020",
+    "target": "ESNext",
     "lib": [
-      "dom",
-      "esnext",
-      "ES2020"
+      "DOM", "DOM.Iterable", "ESNext"
     ],
     "module": "esnext",
     "skipLibCheck": true,
 
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+
+
   },
-  "include": ["lib", "src"],
+  "include": ["lib", "src", "vite-env.d.ts"],
   "exclude": [
     "node_modules",
     "example"
