--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -6,11 +6,12 @@
   "main": "dist/paybutton.js",
   "type": "module",
   "dependencies": {
+    "@paybutton/react": "link:../react",
     "camelcase": "^8.0.0",
-    "preact": "^10.10.0"
+    "preact": "^10.22.0",
+    "preact-compat": "^3.19.0"
   },
   "devDependencies": {
-    "@paybutton/react": "link:../react",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-html": "^1.0.3",
@@ -19,18 +20,34 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "css-loader": "^7.1.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "json-loader": "^0.5.7",
+    "preact-compat": "^3.19.0",
     "preact-jsx-runtime": "^1.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rollup": "^4.9.6",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-dotenv": "^0.5.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-serve": "^2.0.0",
     "rollup-plugin-svg": "^2.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.10.0"
   },
   "scripts": {
     "dev": "rollup -c rollup.dev.js -w --bundleConfigAsCjs",
