chore: react 18 update

--- a/react/package.json
+++ b/react/package.json
@@ -56,6 +56,8 @@
     "@types/mini-css-extract-plugin": "~1.4.3",
     "@types/node": "20.11.5",
     "@types/qrcode.react": "1.0.5",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
@@ -79,8 +81,8 @@
     "mini-css-extract-plugin": "~1.6.2",
     "prettier": "3.2.4",
     "qrcode.react": "1.0.1",
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-is": "18.2.0",
     "react-refresh": "^0.14.0",
     "storybook": "8.0.0-alpha.14",
@@ -93,7 +95,6 @@
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
-    "@types/react-dom": "^18.2.22",
     "axios": "1.6.5",
     "bignumber.js": "9.1.2",
     "copy-to-clipboard": "3.3.3",
