--- a/react/package.json
+++ b/react/package.json
@@ -55,7 +55,7 @@
     "@types/lodash": "4.14.202",
     "@types/mini-css-extract-plugin": "~1.4.3",
     "@types/node": "20.11.5",
-    "@types/qrcode.react": "1.0.5",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -80,7 +80,7 @@
     "lint-staged": "15.2.0",
     "mini-css-extract-plugin": "~1.6.2",
     "prettier": "3.2.4",
-    "qrcode.react": "1.0.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-is": "18.2.0",
