--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -6,6 +6,7 @@
       "dom",
       "esnext"
     ],
+    "rootDir": "./",
     "moduleResolution": "node",
     "jsx": "react",
     "sourceMap": true,
