fix: react deps & checkout
wip

wip

fix: react deps & checkout

--- a/.github/workflows/setup-test-and-build.yml
+++ b/.github/workflows/setup-test-and-build.yml
@@ -26,8 +26,14 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - name: Build
-        run: yarn build
+        run: |
+          yarn build
 
       - name: Check TS declaration files
         run: |
@@ -37,6 +43,11 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - name: Run react unit tests
         run: yarn test
 
